--- a/spring-mvc-001/src/main/webapp/WEB-INF/templates/index.html
+++ b/spring-mvc-001/src/main/webapp/WEB-INF/templates/index.html
@@ -30,5 +30,11 @@
     <input type="submit">form表单post提交</input>
 </form>
 
+</br>
+
+<form th:action="@{/test/save/001/zhangsan}" method="get">
+    <input type="submit">路径参数验证</input>
+</form>
+
 </body>
 </html>
