--- a/spring-mvc-001/src/main/webapp/WEB-INF/templates/reqParam.html
+++ b/spring-mvc-001/src/main/webapp/WEB-INF/templates/reqParam.html
@@ -22,5 +22,17 @@
     <input type="submit" value="使用控制器方法形参接收"/>
 </form>
 
+</br>
+
+<form th:action="@{/reqParam/use_pojo}" method="post">
+    用户名：<input type="text" name="username"><br>
+    密码：<input type="password" name="password"><br>
+    性别：<input type="radio" name="sex" value="男">男<input type="radio" name="sex" value="女">女<br>
+    年龄：<input type="text" name="age"><br>
+    邮箱：<input type="text" name="email"><br>
+    <input type="submit" value="使用pojo接收请求参数">
+</form>
+
+
 </body>
 </html>
